# video_practice

./: .gitignore
drm/: DrmDumbBuf  DrmDumbBuf.cpp
fbdev/: PurpleShow  check_terminal_type.cpp  fb.cpp
fbdev/all/fbcheck/: CMakeLists.txt  compile_commands.json  fbcheck.cpp
fbdev/all/fbdev/: IFbDev.cpp  IFbDev.hpp  ImplFbDev.cpp  ImplFbDev.hpp  InitFileParser.cpp
fbdev/all/fbdev/config/: my_config.ini
fbdev/imx6x-std-armv7a/Fbdev/fbbl/: FbDevBL.cpp  FbDevBL.hpp  FbDevState.cpp  FbDevState.hpp  IFbDevBL.hpp
fbdev/imx6x-std-armv7a/Fbdev/fbdev/: IFbDev.hpp
fbdev/imx6x-std-armv7a/FbdevWrapper/: CMakeLists.txt  IFbDev.hpp  ImplFbDev.cpp  ImplFbDev.hpp
fbdev/imx6x-std-armv7a/demo_color_key_standalone/: CMakeLists.txt  demo_standalone.cpp
fbdev/imx6x-std-armv7a/demo_fb_switch/: CMakeLists.txt  demo.cpp
fbdev/imx6x-std-armv7a/demo_link/: CMakeLists.txt  demo_link.cpp  demo_link.cpp-ori  demo_link_fb0_on_fb1.cpp  demo_link_fb1_basic.cpp  demo_link_fb1_basic_uyvy.cpp
fbdev/imx6x-std-armv7a/new_demo/: CMakeLists.txt  demo.cpp
fbdev/imx6x-std-armv7a/sample_code/alpha_clrkey/: CMakeLists.txt  imx6_alpha_blending_example.c
fbdev/imx6x-std-armv7a/video_service/FbControl/: CMakeLists.txt
fbdev/imx6x-std-armv7a/video_service/FbControl/fbbl/: FbDevBL.cpp  FbDevBL.hpp  FbDevState.cpp  FbDevState.hpp  IFbDevBL.cpp  IFbDevBL.hpp
fbdev/imx6x-std-armv7a/video_service/FbControl/fbdev/: CMakeLists.txt  ImplFbDev.cpp  ImplFbDev.hpp
fbdev/x86_64/: a.out  fb.cpp
fbdev/x86_64/pan_display/: a.out  pan.cpp
fbdev/x86_64/simple/: BlueShow  a.out  fb.cpp
v4l2/01_show_info/: CMakeLists.txt  a.out  compile_commands.json  main.cpp
v4l2/02_IO/: CMakeLists.txt  compile_commands.json  main.cpp  note.md
v4l2/02_IO/capture/: ICapture.cpp  ICapture.h  ImplCapture.cpp  ImplCapture.h
v4l2/02_IO/config/: my_config.ini
v4l2/02_IO/fbdev/: IFbDev.cpp  IFbDev.h  ImplFbDev.cpp  ImplFbDev.h
v4l2/02_IO/util/: IFileParser.cpp  IFileParser.h  IPixFmt.cpp  IPixFmt.h  InitFileParser.cpp  InitFileParser.h
v4l2/02_old_init/: main.cpp
v4l2/99_old_init/: a.out
x11/: a.out  demo.cpp
